--- a/green_house_gases.ipynb
+++ b/green_house_gases.ipynb
@@ -80,7 +80,7 @@
     "\n",
     "Nas regiões árticas podem ser notadas os efeitos do aquecimento global, onde o clima está aquecendo mais rápido, os impactos já são visíveis do espaço. A vegetação de tundra do oeste do Alasca, Quebec e outros lugares ao norte está ficando mais verde, enquanto grandes incêndios entre 2004 e 2015 eliminaram milhões de hectares de florestas no Alasca. \n",
     "\n",
-    "[Link da materia](https://super.abril.com.br/ciencia/20-anos-de-mudancas-na-terra-em-um-gif-fascinante-da-nasa/)\n"
+    "[Link da matéria](https://super.abril.com.br/ciencia/20-anos-de-mudancas-na-terra-em-um-gif-fascinante-da-nasa/)\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
