--- a/green_house_gases.ipynb
+++ b/green_house_gases.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,6 +176,24 @@
    ],
    "source": [
     "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Quantidade de linhas 231\nQuantidade de colunas 268\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Quantidade de linhas', data.shape[0])\n",
+    "print('Quantidade de colunas', data.shape[1])"
    ]
   },
   {
