table of contents summary

--- a/green_house_gases.ipynb
+++ b/green_house_gases.ipynb
@@ -116,6 +116,14 @@
   },
   {
    "source": [
+    "## Table of contents\n",
+    "[1. Loading and preparing data](#1.-Loading-and-preparing-data)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "### Primeiramente vamos comecar importando as bibliotecas que vamos utilizar para as analises e manipulacoes"
    ],
    "cell_type": "markdown",
@@ -133,6 +141,13 @@
     "import seaborn as sns\n",
     "%matplotlib inline"
    ]
+  },
+  {
+   "source": [
+    "# 1. Loading and preparing data"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
