table of contents summary

--- a/green_house_gases.ipynb
+++ b/green_house_gases.ipynb
@@ -117,7 +117,8 @@
   {
    "source": [
     "## Table of contents\n",
-    "[1. Loading and preparing data](#1.-Loading-and-preparing-data)"
+    "[1. Loading and preparing data](#1.-Loading-and-preparing-data)\n",
+    "* [First Bullet Header](#first-bullet)"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -217,6 +218,13 @@
     "print('Quantidade de linhas', data.shape[0])\n",
     "print('Quantidade de colunas', data.shape[1])"
    ]
+  },
+  {
+   "source": [
+    "## First Bullet Header <a class=\"anchor\" id=\"first-bullet\"></a>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
