table of contents summary

--- a/green_house_gases.ipynb
+++ b/green_house_gases.ipynb
@@ -116,9 +116,12 @@
   },
   {
    "source": [
-    "## Table of contents\n",
+    "# Table of contents\n",
     "[1. Loading and preparing data](#1.-Loading-and-preparing-data)\n",
-    "* [First Bullet Header](#first-bullet)"
+    "\n",
+    "[2. Descriptive Statistics](#2.-Descriptive-Statistics)\n",
+    "\n",
+    "[3. Analysis top ten economies](#3.-Analysis-top-ten-economies )\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -218,13 +221,6 @@
     "print('Quantidade de linhas', data.shape[0])\n",
     "print('Quantidade de colunas', data.shape[1])"
    ]
-  },
-  {
-   "source": [
-    "## First Bullet Header <a class=\"anchor\" id=\"first-bullet\"></a>"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -344,6 +340,13 @@
    ]
   },
   {
+   "source": [
+    "# 2. Descriptive Statistics"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 157,
    "metadata": {},
@@ -377,7 +380,7 @@
   },
   {
    "source": [
-    "Com a analise da media, pode-se notar que a cada ano vem tendo um aumento gradativo da emissoes de poluents"
+    "Com a analise da media, pode-se notar que a cada ano vem tendo um aumento gradativo da emissoes de poluentes"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -490,6 +493,13 @@
    "source": [
     "df[['Country','total_emission']].head()"
    ]
+  },
+  {
+   "source": [
+    "# 3. Analysis top ten economies "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
