adicionando novas analises, e sessões

--- a/green_house_gases.ipynb
+++ b/green_house_gases.ipynb
@@ -121,7 +121,9 @@
     "\n",
     "[2. Descriptive Statistics](#2.-Descriptive-Statistics)\n",
     "\n",
-    "[3. Analysis top ten economies](#3.-Analysis-top-ten-economies )\n"
+    "[3. Analysis top ten economies](#3.-Analysis-top-ten-economies)\n",
+    "\n",
+    "[4. Forecast analysis top economies](#4.-Forecast-analysis-top-economies)\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -904,28 +906,28 @@
   },
   {
    "source": [
-    "Podemos notar a partir da tabela acima, que existem economias que crescem muito, porém nem aparecem no top 11 de maiores emissores, como Canadá e a Coreia do Sul, que são exemplos de países em questões ambientais"
+    "Podemos notar a partir da tabela acima, que existem economias que crescem muito, porém nem aparecem no top 11 de maiores emissores, como Canadá e a Coreia do Sul, que são exemplos de países em questões ambientais."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "source": [
-    "Em comparacao **Estados Unido** e **China** correspondem por grande maioria das emissoes do mundo, sendo os **EUA** liderando disparadamente"
+    "Em comparação **Estados Unido** e **China** correspondem por grande maioria das emissões do mundo, sendo os **EUA** liderando disparadamente."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "source": [
-    "Ja o **Brazil** esta esquilibrado com a sua posicao de relevancia nas economias, 11° maior emissor e 12° maior economia em 2020"
+    "Já o **Brasil** está equilibrado com a sua posição de relevância nas economias, 11° maior emissor e 12° maior economia em 2020."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "source": [
-    "## Analisando os paises com maior populacao"
+    "## Analisando os países com maior população"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1017,6 +1019,13 @@
    ]
   },
   {
+   "source": [
+    "Slicing nos dados nos três mais populosos países do mundo, sendo eles EUA, China, e a Índia."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -1052,7 +1061,14 @@
   },
   {
    "source": [
-    "## Analise da serie temporal"
+    "Podemos concluir que a **Índia** dos mais populosos, e o que menos emite **CO2**, porém isso está muito associado ao seu desenvolvimento econômico, onde o país realmente começou a crescer a produção e as emissões em meados dos anos 80, enquanto os **EUA** principalmente, **já se tornavam a maior economia do mundo em meados dos anos 20, após a primeira guerra mundial**."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "# 4. Forecast analysis top economies"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1149,7 +1165,7 @@
     }
    ],
    "source": [
-    "df_economies"
+    "df_economies['Country']"
    ]
   },
   {
