--- a/green_house_gases.ipynb
+++ b/green_house_gases.ipynb
@@ -629,7 +629,7 @@
   },
   {
    "source": [
-    "<img src='images/0106-pib-paises-1-.jpeg'>"
+    "<img src='images/0106-pib-paises-1-.jpeg' width=\"1000\" height=\"600\">"
    ],
    "cell_type": "markdown",
    "metadata": {}
